Increase max job count for metadata queue

This improves the response from drive to UI when there are several team
drives.

Drive sync adds one job per Team Drive to this queue, which causes the
queue to be busy with team drive operations and not responsive to
operations to respond to user interactions.

Bug: 852934
Change-Id: I215bd5fffe60efe576e9b82e4d4737f0ea2d27de
Reviewed-on: https://chromium-review.googlesource.com/1168946
Reviewed-by: Stuart Langley <slangley@chromium.org>
Commit-Queue: Stuart Langley <slangley@chromium.org>
Cr-Commit-Position: refs/heads/master@{#581848}
Former-commit-id: 6962b90e61ae35c242cacc6318e3cb000cbaec7e